--- a/Fooddelivery/src/app/home/home.component.html
+++ b/Fooddelivery/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="container hero">
+    <div>
+        <h1>Ristorante Il Gambero Rosso</h1>
+        
+    </div>
+</div>
