improve home and about us

--- a/Fooddelivery/src/app/home/home.component.html
+++ b/Fooddelivery/src/app/home/home.component.html
@@ -1,6 +1,33 @@
-<div class="container hero">
-    <div>
+<div class="container-fluid hero d-flex justify-content-center align-items-center">
+    <div class="row">
         <h1>Ristorante Il Gambero Rosso</h1>
-        
+        <h3>Delivering food for more than 18 years!</h3>
+        <div class="buttons d-flex justify-content-center">
+        <button type="button" class="btn btn-success menubtn">Our Menu</button>
+        <button type="button" class="btn btn-success bookbtn">Book a Table</button>
+        </div>
+    </div>
+    
+</div>
+
+<div class="restusp2">
+    <h1 class="usphead">Why choose us</h1>
+    <p class="uspargu"> Here are three most common arguments why our regulars love to visit us</p>
+    <div class="container d-flex justify-content-around">
+        <div class="row">
+            <div class="col-4  col-md-4 col-lg-4">01<br>
+                <h4>Our View</h4>
+                <p>People come to us,cause they have one of the best view over the Cliffs of Tarantunla!</p>
+            </div>
+            <div class="col-4  col-md-4 col-lg-4">02<br>
+                <h4> Our Cook</h4>
+                <p>Jeff is the best cook in Tarantula, and has achieved many stars in the last years</p>
+            </div>
+            <div class="col-4  col-md-4 col-lg-4">03<br>
+                <h4>Our Fishermen</h4>
+                <p>They fish with passion and love the nature!</p>
+
+            </div>
+        </div>
     </div>
 </div>
