--- a/Fooddelivery/src/app/footer/footer.component.html
+++ b/Fooddelivery/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="footer">
+<div class="footer d-flex justify-content-center align-items-center">
      <p>Copyright Nikolaus Mayr</p>
 </div>
