--- a/Fooddelivery/src/app/aboutus/aboutus.component.html
+++ b/Fooddelivery/src/app/aboutus/aboutus.component.html
@@ -1,4 +1,20 @@
-<div class="restusp">
-    <h1>Ristorante Il Gambero Rosso</h1>
-    <div></div>
+<div class="container-fluid aboutus">
+    <div class="row">
+        <div class="aboutheader">
+            <h2>Ristorante <h2 class="headdesign">Il Gambero Rosso</h2></h2>
+        </div>
+        <div class="container-fluid d-flex justify-content-center align-items-center">
+            <div class="aboutcont">
+                <div><h3>Little Story About us</h3></div>
+                <div>
+                    <p class="content">Our restauranthistory goes back into the 1870's , when the Grandfather of Georgy Aquilitaya, the today's owner of the restaurant, felt in love with passion of cooking.
+                        Georgy also loves the same passion and now is owner about 10 restaurants all over the world.
+                        Cooking is a thing, wich is very important in Italy and is also anchored in the culture.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, molestias, optio, aspernatur a necessitatibus fuga possimus dolorum quae sint sapiente eos deleniti vel repellat. Nihil iste distinctio earum eaque dolores. 
+                    </p>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
