--- a/Fooddelivery/src/app/home/home.component.scss
+++ b/Fooddelivery/src/app/home/home.component.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Smooch&family=The+Nautigal&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Diplomata+SC&family=Happy+Monkey&family=Smooch&family=The+Nautigal&display=swap');
 .hero {
     height: 500px;
-    background-image: url("https://images.unsplash.com/photo-1559339352-11d035aa65de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fHJlc3RhdXJhbnR8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=600&q=60");
+    background-image: url("../../assets/restaurante.jpg");
     background-repeat: no-repeat;
     width: 100%;
     background-position: center;
@@ -15,6 +16,7 @@
         font-family: 'Smooch', cursive;
         font-family: 'The Nautigal', cursive;
         font-size: 80px;
+        
     }
     h3 {
         text-align: center;
@@ -23,6 +25,7 @@
         font-family: 'Happy Monkey', cursive;
         font-family: 'Smooch', cursive;
         font-family: 'The Nautigal', cursive;
+        
     }
 
 
@@ -36,4 +39,14 @@
 }
 .bookbtn {
     margin-left: 20px;
+}
+.uspargu {
+    text-align: center;
+    text-shadow: 2px black;
+    font-weight: bold;
+    font-family: 'Abril Fatface', cursive;
+}
+h4 {
+    text-decoration: underline;
+    text-decoration-color: green;
 }
