--- a/Fooddelivery/src/app/home/home.component.html
+++ b/Fooddelivery/src/app/home/home.component.html
@@ -10,9 +10,11 @@
     
 </div>
 
-<div class="restusp2">
-    <h1 class="usphead">Why choose us</h1>
-    <p class="uspargu"> Here are three most common arguments why our regulars love to visit us</p>
+<div class="restusp2 container-fluid">
+    <div>
+        <h1 class="usphead">Why choose us</h1>
+        <p class="uspargu"> Here are three most common arguments why our regulars love to visit us</p>
+    </div>
     <div class="container d-flex justify-content-around">
         <div class="row">
             <div class="col-4  col-md-4 col-lg-4">01<br>
