--- a/Fooddelivery/src/app/details/details.component.html
+++ b/Fooddelivery/src/app/details/details.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-    <div class="row row-cols-1 g-md-3 m-2 menu">
+    <div class="row g-md-3 m-2 menu">
         <div class="col" *ngIf="meal">
-            <div class="card h-80">
+            <div class="card h-80 w-50">
                 <img class="card-img-top img-cover cardimage" src="{{meal.image}}">
                 <div class="card-body">
                   <h4 class="card-title" >{{meal.name}}</h4>
