--- a/Fooddelivery/src/app/footer/footer.component.html
+++ b/Fooddelivery/src/app/footer/footer.component.html
@@ -1,3 +1,13 @@
-<div class="footer d-flex justify-content-center align-items-center">
-     <p>Copyright Nikolaus Mayr</p>
+<div class="footer">
+     <div>
+          <span class="bi bi-facebook"></span>
+          <span class="bi bi-instagram"></span>
+          <span class="bi bi-whatsapp"></span>
+     </div>
+     <div class="d-flex justify-content-center">
+          <div>
+               <p>Copyright Nikolaus Mayr</p>
+          </div>
+     </div>
+     
 </div>
