--- a/Fooddelivery/src/app/footer/footer.component.scss
+++ b/Fooddelivery/src/app/footer/footer.component.scss
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 .footer{
     background-color: black ;
     height:80px;
@@ -9,4 +10,10 @@
     color:white;
     font-size: 15px;
     margin-top: 10px;
+}
+.bi {
+    height: 20px;
+    width: 20px;
+    color: white;
+    padding: 15px;
 }
