--- a/Fooddelivery/src/app/order/order.component.html
+++ b/Fooddelivery/src/app/order/order.component.html
@@ -1,1 +1,32 @@
-<p>order works!</p>
+<div class="container-fluid aboutus d-flex justify-content-center align-items-center">
+    
+    <div class="ordercont container-fluid ">
+        <div class="">
+            <h4>You want to make a reservation or order food?</h4>
+                    
+                    <p>Just contact us!</p>
+
+            <hr>
+            <div class="contact col-12 col-md-12 col-lg-12 d-flex justify-content-center">
+                <div class="row">
+                    <div class="icon">
+                        <i class="bi bi-telephone fa-5x"><p>06779933***</p></i>
+                    </div>
+                    
+                    <div class="icon"><i class="bi bi-envelope fa-5x"><p>restaurante@restaurante.restaurante</p></i>
+                    
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+                    
+
+                    
+                    
+                    
+               
+            
+        
